--- a/app/src/main/res/layout/activity_volunteer_campaign_status.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_status.xml
@@ -51,6 +51,13 @@
 
     </RelativeLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/navTopRelativeLayout"
+        android:layout_above="@id/navBot"
+        tools:ignore="NotSibling">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -80,22 +87,185 @@
             android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:text="Campaign Details:"
             android:layout_below="@+id/postedpic"
-            android:layout_centerHorizontal="true"
-            android:textSize="25sp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
+
+        <RelativeLayout
+            android:id="@+id/campaignDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_below="@+id/details"
+            android:background="@drawable/bg_radius_ten_gray">
+
+            <TextView
+                android:id="@+id/titleLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title:"
+                android:textSize="15sp"
+                android:layout_alignParentStart="true"
+                android:layout_marginEnd="10dp"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert Title"
+                android:textSize="15sp"
+                android:layout_toEndOf="@id/titleLabel"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/categoryLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category:"
+                android:textSize="15sp"
+                android:layout_below="@id/title"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"/>
+            <TextView
+                android:id="@+id/categoryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert Category"
+                android:textSize="15sp"
+                android:layout_below="@id/titleLabel"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@id/categoryLabel"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/descLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description:"
+                android:textSize="15sp"
+                android:layout_below="@id/categoryLabel"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"/>
+
+            <LinearLayout
+                android:id="@+id/descriptionLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_below="@+id/descLabel"
+                android:background="#ECECEC"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/descTextView"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="13dp"
+                    android:autoLink="all"
+                    android:background="@null"
+                    android:gravity="top|left"
+                    android:inputType="textMultiLine|textCapSentences"
+                    android:lines="5"
+                    android:maxLines="5"
+                    android:minLines="1"
+                    android:scrollbars="none"
+                    android:text="Insert Description"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/startDateLabel"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Start Date: "
+                android:textSize="15sp"
+                android:layout_below="@id/descriptionLinearLayout"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/startDateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert Start Date"
+                android:textSize="15sp"
+                android:layout_below="@id/descriptionLinearLayout"
+                android:layout_toEndOf="@id/startDateLabel"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/endDateLabel"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="End Date: "
+                android:textSize="15sp"
+                android:layout_below="@id/startDateLabel"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/endDateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert End Date"
+                android:textSize="15sp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@id/startDateTextView"
+                android:layout_toEndOf="@id/endDateLabel"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/ageLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Age: "
+                android:textSize="15sp"
+                android:layout_below="@id/endDateLabel"
+                android:layout_marginTop="20dp"/>
+            <TextView
+                android:id="@+id/ageTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert Age"
+                android:textSize="15sp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/endDateTextView"
+                android:layout_toEndOf="@id/ageLabel"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/locationLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Location: "
+                android:textSize="15sp"
+                android:layout_below="@id/ageLabel"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/locationTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Insert Location"
+                android:textSize="15sp"
+                android:layout_below="@id/ageTextView"
+                android:layout_toEndOf="@id/locationLabel"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/black"/>
+
+        </RelativeLayout>
+
+
 
         <TextView
             android:id="@+id/numberOfVolunteers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Number of Volunteers:"
-            android:layout_below="@+id/title"
+            android:layout_below="@+id/campaignDetails"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:textSize="15sp"
@@ -108,7 +278,7 @@
             android:layout_height="20dp"
             android:background="@drawable/bg_radius_ten_gray"
             android:layout_toRightOf="@+id/numberOfVolunteers"
-            android:layout_below="@id/title"
+            android:layout_below="@id/campaignDetails"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:text="#"
@@ -140,7 +310,7 @@
                 android:layout_height="wrap_content"/>
         </RelativeLayout>
     </RelativeLayout>
-
+    </ScrollView>
 
 
     <!--    nav sa ubos-->
