--- a/app/src/main/res/layout/activity_donation_option_page.xml
+++ b/app/src/main/res/layout/activity_donation_option_page.xml
@@ -67,9 +67,9 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@+id/chooseDonation"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/donate1">
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/donateapp">
 
     </ImageView>
 
@@ -108,7 +108,7 @@
         android:layout_below="@id/imageView1"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/donate2"></ImageView>
+        android:src="@drawable/donatecampaign"></ImageView>
 
     <TextView
         android:id="@+id/fundraisingCampaign"
