--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -48,13 +48,13 @@
         android:textStyle="bold"
         android:layout_below="@id/headerFrameLayout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="5dp"/>
     <HorizontalScrollView
         android:id="@+id/featuredOpportunitiesHorizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/featuredOpportunitiesLabel">
 
         <RelativeLayout
@@ -270,7 +270,7 @@
         android:layout_below="@id/featuredOpportunitiesHorizontalScrollView"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="5dp"
         android:text="Categories"
@@ -283,7 +283,8 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:background="#E4EFFF"
-        android:layout_below="@id/categoriesLabel">
+        android:layout_below="@id/categoriesLabel"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/createCampaignButton"
@@ -312,97 +313,7 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/myProfileLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Profile"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/campaignButtons"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/myProfileLabel"
-        android:background="@drawable/rounded_rectangle"
-        android:backgroundTint="#D9D9D8">
-
-        <ImageView
-            android:id="@+id/pfp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/circular_background"
-            android:clipToOutline="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person_placeholder" />
-
-
-        <TextView
-            android:id="@+id/volunteerTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="180dp"
-            android:layout_marginTop="10dp"
-            android:text="Volunteer"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pfp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:text="Name"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/volunteerTextview"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:text="Edit bio"
-            android:textSize="20sp"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/skillsTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:layout_marginLeft="15sp"
-            android:layout_marginTop="10sp"
-            android:text="Skills:"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="15dp"
-            android:layout_toRightOf="@id/skillsTextview"
-            android:textSize="20sp" />
-
-    </RelativeLayout>
 
     <!--    nav sa ubos-->
     <fragment
