--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -46,7 +46,7 @@
             android:src="@drawable/home" />
 
         <ImageButton
-            android:id="@+id/menuImageButton"
+            android:id="@+id/profileImageButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -56,6 +56,6 @@
             android:layout_weight="1"
             android:background="#F4F5F5"
             android:scaleType="fitCenter"
-            android:src="@drawable/more" />
+            android:src="@drawable/profile" />
     </LinearLayout>
 </RelativeLayout>
