--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomePageActivity">
 
     <FrameLayout
@@ -25,7 +26,7 @@
                 android:layout_marginStart="10dp"
                 android:text="HelpingHands"
                 android:letterSpacing="0.03"
-                android:textSize="28dp"
+                android:textSize="30dp"
                 android:textStyle="bold"
                 android:textColor="#71D0F8" />
             <ImageView
@@ -37,6 +38,9 @@
                 android:src="@drawable/logo"/>
         </RelativeLayout>
     </FrameLayout>
+
+
+
 
     <TextView
         android:id="@+id/featuredOpportunitiesLabel"
@@ -50,224 +54,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="5dp"/>
-    <HorizontalScrollView
-        android:id="@+id/featuredOpportunitiesHorizontalScrollView"
+
+    <RelativeLayout
+        android:id="@+id/featuredOpportunitiesRelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/featuredOpportunitiesLabel">
-
-        <RelativeLayout
+        android:layout_height="190dp"
+        android:layout_below="@id/featuredOpportunitiesLabel"
+        android:background="#0066FF">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:background="#0066FF">
-
-            <RelativeLayout
-                android:layout_width="180dp"
-                android:layout_height="170dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_rectangle">
-
-                <ImageView
-                    android:id="@+id/image1"
-                    android:layout_width="170dp"
-                    android:layout_height="90dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/rounded_rectangle"
-                    android:clipToOutline="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder_image1" />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/image1"
-                    android:layout_marginLeft="5dp"
-                    android:text="Title"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/title"
-                    android:layout_marginLeft="5dp"
-                    android:text="Category"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"/>
-
-                <Button
-                    android:id="@+id/button1"
-                    android:layout_width="100dp"
-                    android:layout_height="25dp"
-                    android:layout_below="@id/category"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@drawable/bg_radius_ten_lightblue"
-                    android:text="View Details"
-                    android:textColor="@color/black"
-                    android:textSize="8sp" />
-
-                <ImageButton
-                    android:id="@+id/bell"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_below="@id/category"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@id/button1"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/bell" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="180dp"
-                android:layout_height="170dp"
-                android:layout_marginLeft="205dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_rectangle">
-
-                <ImageView
-                    android:id="@+id/image2"
-                    android:layout_width="170dp"
-                    android:layout_height="90dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/rounded_rectangle"
-                    android:clipToOutline="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder_image1" />
-
-                <TextView
-                    android:id="@+id/title2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/image2"
-                    android:layout_marginLeft="5dp"
-                    android:text="Title"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/category2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/title2"
-                    android:layout_marginLeft="5dp"
-                    android:text="Category"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"/>
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="100dp"
-                    android:layout_height="25dp"
-                    android:layout_below="@id/category2"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@drawable/bg_radius_ten_lightblue"
-                    android:text="View Details"
-                    android:textColor="@color/black"
-                    android:textSize="8sp" />
-
-                <ImageButton
-                    android:id="@+id/bell2"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_below="@id/category2"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@id/button2"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/bell" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="180dp"
-                android:layout_height="170dp"
-                android:layout_marginLeft="400dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_rectangle">
-
-                <ImageView
-                    android:id="@+id/image3"
-                    android:layout_width="170dp"
-                    android:layout_height="90dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/rounded_rectangle"
-                    android:clipToOutline="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder_image1" />
-
-                <TextView
-                    android:id="@+id/title3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/image3"
-                    android:layout_marginLeft="5dp"
-                    android:text="Title"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/category3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/title3"
-                    android:layout_marginLeft="5dp"
-                    android:text="Category"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"/>
-
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="100dp"
-                    android:layout_height="25dp"
-                    android:layout_below="@id/category3"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@drawable/bg_radius_ten_lightblue"
-                    android:text="View Details"
-                    android:textColor="@color/black"
-                    android:textSize="8sp" />
-
-                <ImageButton
-                    android:id="@+id/bell3"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_below="@id/category3"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@id/button3"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/bell" />
-
-            </RelativeLayout>
-        </RelativeLayout>
-    </HorizontalScrollView>
+            android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/featuredOpportunitiesRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+            </androidx.recyclerview.widget.RecyclerView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/categoriesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/featuredOpportunitiesHorizontalScrollView"
+        android:layout_below="@id/featuredOpportunitiesRelativeLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="40dp"
