--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -48,86 +48,116 @@
 
 
 
-
+<!--CONTENT-->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/navTopLinearLayout"
-        android:background="@drawable/rounded_rectangle"
-        android:backgroundTint="#D9D9D8">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/navTopLinearLayout"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
-        <ImageView
-            android:id="@+id/pfp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <RelativeLayout
+            android:id="@+id/rlEditProfile"
+            android:layout_width="match_parent"
+            android:layout_height="310dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/circular_background"
-            android:clipToOutline="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person_placeholder" />
+            android:background="@drawable/rounded_rectangle"
+            android:elevation="10dp">
+
+            <ImageView
+                android:id="@+id/pfp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/circular_background"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/person_placeholder"
+                android:layout_centerHorizontal="true"/>
+
+            <Button
+                android:id="@+id/editProfileButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pfp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
+                android:text="Edit Profile"
+                android:textAllCaps="false"
+                android:textColor="#737373"
+                android:textSize="20sp" />
 
 
-        <TextView
-            android:id="@+id/volunteerTextview"
-            android:layout_width="wrap_content"
+
+
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/editProfileButton"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Name:"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+
+            <TextView
+                android:id="@+id/emailTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nameTextView"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10sp"
+                android:text="Email:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/phoneTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/emailTextview"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10sp"
+                android:text="Mobile #:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="180dp"
-            android:layout_marginTop="10dp"
-            android:text="Volunteer"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pfp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:text="Name"
-            android:textColor="@color/black"
+            android:text="Logout"
+            android:textAllCaps="false"
+            android:layout_below="@+id/rlEditProfile"
+            android:layout_marginRight="100dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="100dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:elevation="200dp"
+            android:background="@drawable/bg_login_button">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/volunteerTextview"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:text="Edit bio"
-            android:textSize="20sp"
-            android:textStyle="italic" />
+        </Button>
 
-        <TextView
-            android:id="@+id/skillsTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:layout_marginLeft="15sp"
-            android:layout_marginTop="10sp"
-            android:text="Skills:"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="15dp"
-            android:layout_toRightOf="@id/skillsTextview"
-            android:textSize="20sp" />
 
     </RelativeLayout>
+
+
 
 
 <!--    nav sa ubos-->
