--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditProfileActivity"
->
+    tools:context=".EditProfileActivity">
 
     <ImageView
         android:id="@+id/navTop"
@@ -42,7 +40,7 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="90dp"
                 android:layout_weight="1"
-                android:text="My Profile"
+                android:text="Edit Profile"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
@@ -50,8 +48,6 @@
             </TextView>
         </LinearLayout>
     </LinearLayout>
-
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -65,8 +61,6 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
-
-
             <TextView
                 android:id="@+id/txt"
                 android:layout_width="match_parent"
@@ -77,9 +71,8 @@
                 android:textSize="25dp"
                 android:textStyle="bold"
                 android:textColor="@color/black">
-
             </TextView>
-            <!-- Profile Picture -->
+
             <ImageButton
                 android:id="@+id/profilePic"
                 android:layout_width="150dp"
@@ -92,11 +85,8 @@
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
                 android:layout_marginTop="20dp"
-
                 android:src="@drawable/person_placeholder"
                 android:layout_below="@+id/txt"/>
-
-            <!-- Name -->
 
             <TextView
                 android:id="@+id/txtName"
@@ -121,10 +111,7 @@
                 android:elevation="10dp"
                 android:hint="Name"
                 android:paddingLeft="10dp">
-
             </EditText>
-
-            <!-- Email -->
 
             <TextView
                 android:id="@+id/txtEmail"
@@ -151,11 +138,7 @@
                 android:layout_marginLeft="30dp"
                 android:paddingLeft="10dp"
                 android:inputType="textEmailAddress">
-
             </EditText>
-
-
-            <!-- Phonenumber -->
 
             <TextView
                 android:id="@+id/txtPhone"
@@ -182,10 +165,10 @@
                 android:layout_marginLeft="30dp"
                 android:paddingLeft="10dp"
                 android:inputType="number">
-
             </EditText>
 
             <Button
+                android:id="@+id/saveButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/editPhone"
@@ -201,7 +184,6 @@
         </RelativeLayout>
     </ScrollView>
 
-    <!--    nav bottom-->
     <fragment
         android:id="@+id/navBarFragment"
         android:name="com.intprog.helpinghands.NavBarFragment"
@@ -210,4 +192,3 @@
         android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
-
